<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".ui.admin.AdminFragment">

    <!-- Header Image -->
    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_title"
        android:scaleType="fitXY"
        android:src="@drawable/header"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Main Image -->
    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/epadmins"
        app:layout_constraintBottom_toTopOf="@id/AdminLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView11" />

    <!-- FrameLayout for Button -->
    <FrameLayout
        android:id="@+id/AdminLayout"
        android:layout_width="0dp"
        android:layout_height="53dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView10">

        <!-- Background Image in FrameLayout -->
        <ImageView
            android:id="@+id/imgVisitHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/side_nav_bar" />

        <!-- Transparent Overlay for Button -->
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A1000000" />

        <!-- Button Text over Image -->
        <TextView
            android:id="@+id/txtVisitHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/epadmin_download"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
