<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".First_Impression_Activity">

    <!-- Top Image -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="411dp"
        android:layout_height="58dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <!-- Main Image -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/event_pulse" />

    <!-- Horizontal Layout for Buttons -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DisableBaselineAlignment">

        <!-- Visit Home Button -->
        <FrameLayout
            android:id="@+id/visitHome_Frame_Layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgVisitHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/FI_page_btn1"
                android:scaleType="fitXY"
                android:src="@drawable/visit_home" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#A1000000" />

            <TextView
                android:id="@+id/txtVisitHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/FI_page_btn1"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>

        <!-- Register Now Button -->
        <FrameLayout
            android:id="@+id/Register_frame_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgRegisterNow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/FI_page_btn2"
                android:scaleType="fitXY"
                android:src="@drawable/register" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#A1000000" />

            <TextView
                android:id="@+id/txtRegisterNow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/FI_page_btn2"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
